--- a/src/components/LogIn/Login.css
+++ b/src/components/LogIn/Login.css
@@ -55,6 +55,7 @@ input:focus {
   font-size: 1rem;
   cursor: pointer;
   width: 100%;
+  margin-bottom: 1rem;
   transition: all 0.3s, transform 0.1s;
 }
 
